--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="amount">
-            <mat-label class="">: כמות שומרים</mat-label>
+            <mat-label>: כמות שומרים</mat-label>
             <mat-form-field class="example-full-width">
                 <input #input min="0" type="number" [(ngModel)]="amount" matInput (click)="selectInput(input)">
             </mat-form-field>
