--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -42,7 +42,8 @@
             <p class="pfont2">{{this.timeOfShiftFormatted}}: משך כל שמירה</p>
         </div>
         <div class="btn2">
-            <button (click)="exportToPDF()" mat-flat-button color="warn"><mat-icon>description</mat-icon>PDF ייצוא
+            <button class="pdfBtn" (click)="exportToPDF()" mat-flat-button
+                color="warn"><mat-icon>description</mat-icon>PDF ייצוא
                 לקובץ</button>
         </div>
         <div class="inputs">
