--- a/src/app/components/list/list.component.css
+++ b/src/app/components/list/list.component.css
@@ -35,13 +35,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: open;
+    /* font-family: open;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
     font-variation-settings:
-        "wdth" 100;
+        "wdth" 100; */
 }
 
 .btn {
@@ -96,7 +96,7 @@
     /* margin-top: 1%; */
 }
 
-.pfont {
+/* .pfont {
     font-family: open;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
@@ -104,27 +104,27 @@
     font-style: normal;
     font-variation-settings:
         "wdth" 100;
-}
+} */
 
 .pfont1 {
-    font-family: open;
+    /* font-family: open;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     font-variation-settings:
-        "wdth" 100;
+        "wdth" 100; */
     padding-top: 4%;
 }
 
 .pfont2 {
-    font-family: open;
+    /* font-family: open;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     font-variation-settings:
-        "wdth" 100;
+        "wdth" 100; */
     margin-top: -7px;
     /* padding-top: -5%; */
 }
@@ -161,13 +161,13 @@
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.2s;
-    font-family: open;
+    /* font-family: open;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     font-variation-settings:
-        "wdth" 100;
+        "wdth" 100; */
 }
 
 .calcBtn:hover {
@@ -188,13 +188,13 @@
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.2s;
-    font-family: open;
+    /* font-family: open;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     font-variation-settings:
-        "wdth" 100;
+        "wdth" 100; */
 }
 
 .shuffleBtn:hover {
@@ -216,13 +216,13 @@
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.2s;
-    font-family: open;
+    /* font-family: open;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     font-variation-settings:
-        "wdth" 100;
+        "wdth" 100; */
 }
 
 .clearBtn:hover {
@@ -285,7 +285,7 @@
         width: 90%;
     }
 
-    .pfont {
+    /* .pfont {
         font-family: open;
         font-family: "Open Sans", sans-serif;
         font-optical-sizing: auto;
@@ -363,5 +363,5 @@
         font-style: normal;
         font-variation-settings:
             "wdth" 100;
-    }
+    } */
 }
