--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,10 @@
 
 
 html,
+body {
+    height: 100%;
+}
+
 * {
     font-family: 'Open Sans', 'sans-serif';
     font-optical-sizing: auto;
@@ -14,7 +18,7 @@ html,
 }
 
 body {
-    height: 100%;
+
     margin: 0;
     /* font-family: Roboto, "Helvetica Neue", sans-serif; */
     background-image: url('/assets/background3.jpg');
@@ -41,9 +45,8 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
-    body {
-        font-family: open;
-        font-family: "Open Sans", sans-serif;
+    * {
+        font-family: 'Open Sans', 'sans-serif';
         font-optical-sizing: auto;
         font-weight: 600;
         font-style: normal;
