--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 * {
-    font-family: 'Open Sans', 'sans-serif';
+    font-family: 'Open Sans', sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
@@ -46,7 +46,7 @@ body {
 
 @media only screen and (max-width: 600px) {
     * {
-        font-family: 'Open Sans', 'sans-serif';
+        font-family: 'Open Sans', sans-serif;
         font-optical-sizing: auto;
         font-weight: 600;
         font-style: normal;
