--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -7,7 +7,7 @@
                 <!-- <ngx-mat-timepicker [(ngModel)]="startTime"></ngx-mat-timepicker> -->
                 <div class="ngx-timepicker-field-example">
                     <ngx-timepicker-field [(ngModel)]="startTime" [format]="24" [defaultTime]="'00:00'"
-                        [clockTheme]="customTheme"></ngx-timepicker-field>
+                        [clockTheme]="customTheme" inputmode="number"></ngx-timepicker-field>
                 </div>
 
             </div>
@@ -16,7 +16,7 @@
                 <!-- <ngx-mat-timepicker [(ngModel)]="endTime"></ngx-mat-timepicker> -->
                 <div class="ngx-timepicker-field-example">
                     <ngx-timepicker-field [(ngModel)]="endTime" [format]="24" [defaultTime]="'00:00'"
-                        [clockTheme]="customTheme"></ngx-timepicker-field>
+                        [clockTheme]="customTheme" inputmode="number"></ngx-timepicker-field>
                 </div>
             </div>
         </div>
