--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -5,16 +5,16 @@
             <div class="time">
                 <label class="pfont">: תחילת שמירה</label>
                 <div class="ngx-timepicker-field-example">
-                    <ngx-timepicker-field [(ngModel)]="startTime" [format]="24" [defaultTime]="'00:00'"
-                        [clockTheme]="customTheme" inputmode="numeric" pattern="\d*" type="tel"></ngx-timepicker-field>
+                    <ngx-timepicker-field [(ngModel)]="startTime" [format]="24" [clockTheme]="customTheme"
+                        inputmode="numeric" pattern="\d*" type="tel"></ngx-timepicker-field>
                 </div>
 
             </div>
             <div class="time">
                 <label class="pfont">: סוף שמירה</label>
                 <div class="ngx-timepicker-field-example">
-                    <ngx-timepicker-field [(ngModel)]="endTime" [format]="24" [defaultTime]="'00:00'"
-                        [clockTheme]="customTheme" inputmode="numeric" pattern="\d*" type="tel"></ngx-timepicker-field>
+                    <ngx-timepicker-field [(ngModel)]="endTime" [format]="24" [clockTheme]="customTheme"
+                        inputmode="numeric" pattern="\d*" type="tel"></ngx-timepicker-field>
                 </div>
             </div>
         </div>
